SDS-24-02: fixes for scrollbar in new Chrome

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,7 @@
 :root {
   --primary: #{$blue};
-  --secondary: #{$gray-500} --tertiary: #{$verydarkblue};
+  --secondary: #{$gray-500};
+  --tertiary: #{$verydarkblue};
 }
 
 * {
